src/test/deca/context/invalid/affectation.deca
//ERROR :4:
{
     integer a = 3;
}
